--- a/index.html
+++ b/index.html
@@ -202,8 +202,7 @@
                     <div class="opinion">
                         <figure class="quote">
                             <blockquote>
-                                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eius laudantium dignissimos, quis quia saepe voluptates hic illo cupiditate labore? Possimus sunt minima quaerat Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quam sapiente asperiores
-                                inventore architecto quis ullam id dolorem earum non, veritatis quo laboriosam officiis harum neque debitis nisi rem odit amet?
+                                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eius laudantium dignissimos, quis quia saepe voluptates hic illo cupiditate labore? Possimus sunt minima quaerat Lorem ipsum, dolor
                             </blockquote>
                             <figcaption>
                                 &mdash; Jamie Richardson, Founder of coco media &mdash;</ </figcaption>
@@ -216,8 +215,7 @@
                     <div class="opinion">
                         <figure class="quote">
                             <blockquote>
-                                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eius laudantium dignissimos, quis quia saepe voluptates hic illo cupiditate labore? Possimus sunt minima quaerat Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas consequuntur blanditiis
-                                ex in cupiditate earum qui officia! Quis, excepturi dolores cumque incidunt illo fugit temporibus vel non autem tenetur dolorum!
+                                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eius laudantium dignissimos, quis quia saepe voluptates hic illo cupiditate labore? Possimus sunt minima quaerat Lorem ipsum dolor
                             </blockquote>
                             <figcaption>
                                 &mdash; Jamie Richardson, Founder of coco media &mdash;</ </figcaption>
@@ -229,8 +227,8 @@
                 </div>
             </div>
         </section>
-        <section id="contact" class="flex">
-            <h2 class="section-title">Ready to talk about your next project?</h2>
+        <section id="contact" class="flex f-center">
+            <h2 class="section-title contact-text">Ready to talk about your next project?</h2>
             <button class="btn">CONTACT US</button>
         </section>
     </main>
