--- a/index.html
+++ b/index.html
@@ -13,11 +13,23 @@
 
 
     <header id="site-title">
-        <nav class="navigation">
-            <div class="container">
-                lala
-            </div>
+        <nav>
+            <input id="nav-toggle" type="checkbox">
+            <div class="logo"><img src="img/logo.png" alt=""></div>
+            <ul class="links">
+                <li><a href="#site-title">Home</a></li>
+                <li><a href="#services">About</a></li>
+                <li><a href="#relax">Work</a></li>
+                <li><a href="#project">Projects</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+            <label for="nav-toggle" class="icon-burger">
+                <div class="line"></div>
+                <div class="line"></div>
+                <div class="line"></div>
+            </label>
         </nav>
+
         <div class="black-bg flex f-center">
             <div class="flex f-center">
                 <h1 class="main-site-title">CREATIVE<br> DIGITAL SOLUTIONS</h1>
@@ -95,7 +107,7 @@
                                 <h4>Round the clock support</h4>
                             </div>
 
-                            <div class="div btn-area ">
+                            <div class="div btn-area">
                                 <button class="btn">Learn More</button>
                             </div>
 
@@ -122,7 +134,7 @@
 
                         <div class="div flex">
                             <div class="circle flex">
-                                <img class="icon basket" src="img/icons/Icon-Basket.png" alt=" ">
+                                <img class="icon basket" src="img/icons/Icon-Basket.png" alt="">
                             </div>
                             <div class="icon-desc">
                                 <h3>Initial Setup & Cumonisation</h3>
@@ -133,7 +145,7 @@
                         </div>
                         <div class="div flex">
                             <div class="circle flex">
-                                <img class="icon laptop" src="img/icons/Icon-Laptop.png" alt=" ">
+                                <img class="icon laptop" src="img/icons/Icon-Laptop.png" alt="">
                             </div>
                             <div class="icon-desc">
                                 <h3>Powerfull SEO features</h3>
@@ -142,7 +154,7 @@
                         </div>
                         <div class="div flex">
                             <div class="circle flex">
-                                <img class="icon lock" src="img/icons/Icon-Locked.png" alt=" ">
+                                <img class="icon lock" src="img/icons/Icon-Locked.png" alt="">
                             </div>
                             <div class="icon-desc">
                                 <h3>Secure encryption</h3>
@@ -156,7 +168,7 @@
                     </div>
 
                 </div>
-                <div class=" right "></div>
+                <div class=" right"></div>
             </div>
         </section>
 
@@ -232,6 +244,11 @@
             <button class="btn">CONTACT US</button>
         </section>
     </main>
+    <footer id="footer ">
+        <div class="container flex f-center ">
+            <h5>Coded and created by <strong> <a href="adm-design... "> Adm-studio</a></strong> 05/2021</h5>
+        </div>
+    </footer>
 </body>
 
 </html>
